# Agent-flow

./: .gitignore  AGENTS.md  README.md  initial_prompt  pyproject.toml
.agentflow/: architecture-rules.md  config.yaml  project-context.md  validation.yaml
.agentflow/policies/: commands.yaml  paths.yaml
.agentflow/prompts/: implementer.md  planner.md
docs/: agent-contracts.md  architecture.md  cli-design.md  configuration-design.md  context-construction.md  event-model.md  failure-and-recovery.md  future-vscode-integration.md  future-web-dashboard.md  git-worktree-strategy.md  implementation-roadmap.md  mvp-scope.md  permissions-and-safety.md  persistence-design.md  product-vision.md  project-integration-model.md  risks-and-open-questions.md  testing-strategy.md  user-guide.md  validation-and-review-loop.md  workflow-state-machine.md
docs/decisions/: 0001-python-cli-first.md  0002-state-machine-owned-by-orchestrator.md  0003-agent-provider-adapters.md  0004-git-worktree-isolation.md  0005-files-plus-sqlite-persistence.md  0006-installed-tool-with-project-local-configuration.md  0007-deterministic-validation-before-ai-review.md  0008-explicit-human-approval-boundaries.md
examples/project-configs/: django-config.yaml  python-config.yaml
examples/tasks/: TASK-001-acceptance-criteria.md  TASK-001-events.jsonl  TASK-001-findings.json  TASK-001-plan.md  TASK-001-requirements.md  TASK-001-task.yaml  TASK-001-validation-results.json
examples/vscode/: tasks.json
src/agentflow/: __init__.py
tests/integration/: test_cli_agent_run.py  test_cli_approve_commit.py  (+15 more)
(+47 files in other folders)
