[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "agentflow"
version = "0.1.0"
description = "Local-first AI software-development orchestration with explicit workflow control"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "AgentFlow contributors" }
]
dependencies = [
  "pydantic>=2.11,<3",
  "pyyaml>=6.0.2,<7",
  "rich>=14.0,<15",
  "typer>=0.16,<1"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1"
]

[project.scripts]
agentflow = "agentflow.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
mypy_path = ["src"]
packages = ["agentflow"]
